Fixed z-index bug

--- a/src/styles/boards.scss
+++ b/src/styles/boards.scss
@@ -30,7 +30,7 @@
 #board2.notStarted::before {
   display: block;
   opacity: 100;
-  z-index: 5;
+  z-index: 7;
 }
 .row-p1,
 .row-p2 {
